finish login and register with themes and redirect to dashboard on login, no access the jwt except from the front end serverside and primitive table